syntax = "proto3";

option go_package = "proto/pb";

message Item {
  string name = 1;
}

message GetItemListRequest {}
message GetItemListResponse { repeated Item items = 1; }

service Inventory {
  rpc GetItemList(GetItemListRequest) returns (GetItemListResponse) {}
}